remove vendor folder

--- a/src/Makevars.win.in
+++ b/src/Makevars.win.in
@@ -13,6 +13,7 @@ $(STATLIB):
 
 clean:
 	rm -Rf $(SHLIB) $(STATLIB) $(OBJECTS) rust/target
+	rm -Rf vendor
 
 rustup:
 	rustup target add $(TARGET) || true
